Linked a script.js file to the index html file.

--- a/Search Page/index.html
+++ b/Search Page/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="grandparent">
         <div class="parent">
-            <h3 class="search-box" contenteditable="True">Enter the search keyword here</h3>
+            <h3 class="search-box" onclick="th contenteditable="True">Enter the search keyword here</h3>
             <div class="tabs-container">
                 <button>Search on Google</button>
                 <button>Search on YouTube</button>
@@ -19,5 +19,7 @@
             </div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
