Changed the text Twitter with the old Twitter icon.

--- a/Search Page/index.html
+++ b/Search Page/index.html
@@ -17,7 +17,7 @@
                 <button id="google-button" class="search-button">Search on Google</button>
                 <button id="youtube-button" class="search-button">Search on YouTube</button>
                 <button id="reddit-button" class="search-button">Search on Reddit</button>
-                <button id="twitter-button" class="search-button">Search on Twitter<img src="Icons/Logo_of_Twitter,_Inc..svg.png" alt="" srcset="" width="20"></button>
+                <button id="twitter-button" class="search-button">Search on <img src="Icons/Twitter_Text_logo.svg.png" width="80"><img src="Icons/Logo_of_Twitter,_Inc..svg.png" width="20"></button>
             </div>
         </div>
     </div>
