--- a/Search Page/index.html
+++ b/Search Page/index.html
@@ -6,18 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AU's Search Page</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="grandparent">
         <div class="parent">
+            <div id="main-header">AU's Search Engine</div>
             <div class="search-box" id="search-box" contenteditable="True" onclick="document.getElementById('search-box').innerHTML=''">Enter the search keyword here</div>
-            <div class="tabs-container">
-                <button id="google-button" class="search-button">Search on Google</button>
-                <button id="youtube-button" class="search-button">Search on YouTube</button>
-                <button id="reddit-button" class="search-button">Search on Reddit</button>
-                <button id="twitter-button" class="search-button">Search on <img src="Icons/Twitter_Text_logo.svg.png" width="80"><img src="Icons/Logo_of_Twitter,_Inc..svg.png" width="20"></button>
+            <div class="tabs-container-parent">
+                <div class="tabs-container-child">
+                    <img class="upper-logo" src="Icons/Google Icons/icons8-google-256.png">
+                    <button id="google-button" class="search-button">Search on <span style="color: #4285F4;">G</span><span style="color: #DB4437;">o</span><span style="color: #F4B400;">o</span><span style="color: #4285F4;">g</span><span style="color: #0F9D58;">l</span><span style="color: #DB4437;">e</span></button>
+                </div>
+                <div class="tabs-container-child">
+                    <img class="upper-logo" src="Icons/YouTube Icons/youtube-svgrepo-com.svg">
+                    <button id="youtube-button" class="search-button">Search on YouTube</button>
+                </div>
+                <div class="tabs-container-child">
+                    <img class="upper-logo" src="Icons/Reddit Icons/icons8-reddit-64.png">
+                    <button id="reddit-button" class="search-button">Search on Reddit</button>
+                </div>
+                <div class="tabs-container-child">
+                    <img class="upper-logo" src="Icons/Twitter Icons/Logo_of_Twitter,_Inc..svg.png">
+                    <button id="twitter-button" class="search-button">Search on Twitter</button>
+                </div>
             </div>
         </div>
     </div>
