Assigned separate IDs for all 4 containers that have the buttons and the images.

--- a/Search Page/index.html
+++ b/Search Page/index.html
@@ -17,19 +17,19 @@
             <div id="main-header">AU's Search Engine</div>
             <div class="search-box" id="search-box" contenteditable="True" onclick="document.getElementById('search-box').innerHTML=''">Enter the search keyword here</div>
             <div class="tabs-container-parent">
-                <div class="tabs-container-child">
+                <div class="tabs-container-child" id="google-container">
                     <img class="upper-logo" src="Icons/Google Icons/icons8-google-256.png">
                     <button id="google-button" class="search-button">Search on <span style="color: #4285F4;">G</span><span style="color: #DB4437;">o</span><span style="color: #F4B400;">o</span><span style="color: #4285F4;">g</span><span style="color: #0F9D58;">l</span><span style="color: #DB4437;">e</span></button>
                 </div>
-                <div class="tabs-container-child">
+                <div class="tabs-container-child" id="youtube-container">
                     <img class="upper-logo" src="Icons/YouTube Icons/youtube-svgrepo-com.svg">
                     <button id="youtube-button" class="search-button">Search on YouTube</button>
                 </div>
-                <div class="tabs-container-child">
+                <div class="tabs-container-child" id="reddit-container">
                     <img class="upper-logo" src="Icons/Reddit Icons/icons8-reddit-64.png">
                     <button id="reddit-button" class="search-button">Search on Reddit</button>
                 </div>
-                <div class="tabs-container-child">
+                <div class="tabs-container-child" id="twitter-container">
                     <img class="upper-logo" src="Icons/Twitter Icons/Logo_of_Twitter,_Inc..svg.png">
                     <button id="twitter-button" class="search-button">Search on Twitter</button>
                 </div>
