--- a/Search Page/index.html
+++ b/Search Page/index.html
@@ -9,29 +9,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="grandparent">
         <div class="parent">
-            <div id="main-header">AU's Search Engine</div>
+            <div id="main-header"><span style="color: #ff4500;">AU's </span><span style="color: #4285F4;">S</span><span style="color: #DB4437;">e</span><span style="color: #F4B400;">a</span><span style="color: #4285F4;">r</span><span style="color: #0F9D58;">c</span><span style="color: #DB4437;">h</span> <span style="color: #4285F4;">E</span><span style="color: #DB4437;">n</span><span style="color: #F4B400;">g</span><span style="color: #4285F4;">i</span><span style="color: #0F9D58;">n</span><span style="color: #DB4437;">e</span></div>
             <div class="search-box" id="search-box" contenteditable="True" onclick="document.getElementById('search-box').innerHTML=''">Enter the search keyword here</div>
             <div class="tabs-container-parent">
                 <div class="tabs-container-child" id="google-container">
                     <img class="upper-logo" src="Icons/Google Icons/icons8-google-256.png">
-                    <button id="google-button" class="search-button">Search on <span style="color: #4285F4;">G</span><span style="color: #DB4437;">o</span><span style="color: #F4B400;">o</span><span style="color: #4285F4;">g</span><span style="color: #0F9D58;">l</span><span style="color: #DB4437;">e</span></button>
+                    <button id="google-button" class="search-button">Search <span style="color: #4285F4;">G</span><span style="color: #DB4437;">o</span><span style="color: #F4B400;">o</span><span style="color: #4285F4;">g</span><span style="color: #0F9D58;">l</span><span style="color: #DB4437;">e</span></button>
                 </div>
                 <div class="tabs-container-child" id="youtube-container">
                     <img class="upper-logo" src="Icons/YouTube Icons/youtube-svgrepo-com.svg">
-                    <button id="youtube-button" class="search-button">Search on YouTube</button>
+                    <button id="youtube-button" class="search-button">Search YouTube</button>
                 </div>
                 <div class="tabs-container-child" id="reddit-container">
                     <img class="upper-logo" src="Icons/Reddit Icons/icons8-reddit-64.png">
-                    <button id="reddit-button" class="search-button">Search on Reddit</button>
+                    <button id="reddit-button" class="search-button">Search Reddit</button>
                 </div>
                 <div class="tabs-container-child" id="twitter-container">
                     <img class="upper-logo" src="Icons/Twitter Icons/Logo_of_Twitter,_Inc..svg.png">
-                    <button id="twitter-button" class="search-button">Search on Twitter</button>
+                    <button id="twitter-button" class="search-button">Search Twitter</button>
                 </div>
             </div>
         </div>
