Removed the onClick event for the search-box and instead assigned an addEventListener in the script file.

--- a/Search Page/index.html
+++ b/Search Page/index.html
@@ -15,8 +15,9 @@
 <body>
     <div class="grandparent">
         <div class="parent">
+            <!-- <div id="main-header"><span style="color: #4285F4;">A</span><span style="color: #F4B400;">U'</span><span style="color: #DB4437;">s </span><span style="color: #4285F4;">S</span><span style="color: #DB4437;">e</span><span style="color: #F4B400;">a</span><span style="color: #4285F4;">r</span><span style="color: #0F9D58;">c</span><span style="color: #DB4437;">h</span> <span style="color: #4285F4;">E</span><span style="color: #DB4437;">n</span><span style="color: #F4B400;">g</span><span style="color: #4285F4;">i</span><span style="color: #0F9D58;">n</span><span style="color: #DB4437;">e</span></div> -->
             <div id="main-header"><span style="color: #ff4500;">AU's </span><span style="color: #4285F4;">S</span><span style="color: #DB4437;">e</span><span style="color: #F4B400;">a</span><span style="color: #4285F4;">r</span><span style="color: #0F9D58;">c</span><span style="color: #DB4437;">h</span> <span style="color: #4285F4;">E</span><span style="color: #DB4437;">n</span><span style="color: #F4B400;">g</span><span style="color: #4285F4;">i</span><span style="color: #0F9D58;">n</span><span style="color: #DB4437;">e</span></div>
-            <div class="search-box" id="search-box" contenteditable="True" onclick="document.getElementById('search-box').innerHTML=''">Enter the search keyword here</div>
+            <div class="search-box" id="search-box" contenteditable="True"">Enter the search keyword here</div>
             <div class="tabs-container-parent">
                 <div class="tabs-container-child" id="google-container">
                     <img class="upper-logo" src="Icons/Google Icons/icons8-google-256.png">
@@ -49,3 +50,7 @@
 <!-- <i class="material-icons";>home</i>
 <span class="material-symbols-outlined";>youtube_activity</span>
 <i class="material-symbols-outlined" style="color: red;">add_to_drive</i> -->
+
+<!-- onclick="document.getElementById('search-box').innerHTML='' -->
+
+<!-- https://anant13u.github.io/Javascript-Projects/Search%20Page/ -->
