Created a separate directory for keeping the files containing the code for downloading a single image by double clicking on it.

--- a/JS_Download_Image/Download Single Image by double-clicking/index.html
+++ b/JS_Download_Image/Download Single Image by double-clicking/index.html
@@ -15,6 +15,7 @@
             <img class="dwImage" src="Images/main-qimg-1eda01a8f49c21af87c80db559e88742-pjlq.jpeg" alt="">
             <img class="dwImage" src="Images/IMG_20211030_173755.jpg" alt="">
             <img class="dwImage" src="Images/david-becker-ea4FS8zIsqE-unsplash.jpg" alt="">
+            <!-- <a class="class="download-icon""><i class="fa fa-download"></i></a> -->
         </div>
     </div>
 
