--- a/JS_Download_Image/Download all images in a container/index.html
+++ b/JS_Download_Image/Download all images in a container/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download All Images in a container</title>
+    <title>Download all images in a container</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d3aee35f08.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="parent">
-        <div class="image-container">
+        <h1>Download all images in a container</h1>
+        <div class="image-container container">
             <img class="dwImage" src="Images/groot_wallpaper.jpeg" alt="">
-            <!-- <button class="download-link">Download Image</button> -->
             <img class="dwImage" src="Images/hd-wallpaper-3077928_1920.jpg" alt="">
             <img class="dwImage" src="Images/wallpaperflare.com_wallpaper (2).jpg" alt="">
             <img class="dwImage" src="Images/wallpaperflare.com_wallpaper (1).jpg" alt="">
-            <button id="dwButton">Download all images in this container</button>
-            <!-- <a class="class="download-icon""><i class="fa fa-download"></i></a> -->
+            <img class="dwImage" src="Images/wallpaperflare.com_wallpaper.jpg" alt="">
+        </div>
+        <div class="button-container container">
+            <button class="button" id="dwButton">Download all images in this container</button>
+            <button class="button" id="zipdwButton">Zip and download all images in this container</button>
         </div>
     </div>
 
