Added a heading at the top of the page to describe which method is being used to download the images. In the stylesheet set the flex-direction to column and aligned items in center. Also increased the width of the images from 33% to 42%.

--- a/JS_Download_Image/Download Single Image by double-clicking/index.html
+++ b/JS_Download_Image/Download Single Image by double-clicking/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download Images</title>
+    <title>Download Single Image by double-clicking</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="parent">
+        <h1>Download Single Image by double-clicking</h1>
         <div class="image-container">
             <img class="dwImage" src="Images/main-qimg-5bbde7df26fef554230beaf0bf466c72-lq.jpeg" alt="">
-            <!-- <button class="download-link">Download Image</button> -->
-            <img class="dwImage" src="Images/main-qimg-1eda01a8f49c21af87c80db559e88742-pjlq.jpeg" alt="">
             <img class="dwImage" src="Images/IMG_20211030_173755.jpg" alt="">
+            <img class="dwImage" src="Images/main-qimg-1eda01a8f49c21af87c80db559e88742-pjlq.jpeg" alt="">
             <img class="dwImage" src="Images/david-becker-ea4FS8zIsqE-unsplash.jpg" alt="">
-            <!-- <a class="class="download-icon""><i class="fa fa-download"></i></a> -->
         </div>
     </div>
 
