This commit adds a movie poster image to the code using base64 encoding. The image is displayed with an <img> tag and its ID is set to 'movie-poster'. Also removed the filler text from detail-area elements.

--- a/Movie Search Page/index.html
+++ b/Movie Search Page/index.html
@@ -15,32 +15,32 @@
                 <p id="movie-search-input" contenteditable="True"></p>
                 <button id="fetch-button">Fetch Details</button>
             </div>
-            <img id="movie-poster" src="" alt="asdfsdf">
+            <img id="movie-poster" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mN88eD1HwAENwK5wwhTfQAAAABJRU5ErkJggg==" alt="asdfsdf">
         </div>
         <div class="movie-details-container">
             <div class="child-container">
                 <p class="label">Name</p>
-                <p class="detail-area" id="movie-name">ssdgs</p>
+                <p class="detail-area" id="movie-name"></p>
                 <p class="label">Year</p>
-                <p class="detail-area" id="movie-year">basdajd</p>
+                <p class="detail-area" id="movie-year"></p>
             </div>
             <div class="child-container">
                 <p class="label">Genre</p>
-                <p class="detail-area" id="movie-genre">dfsfds</p>
+                <p class="detail-area" id="movie-genre"></p>
                 <p class="label">Rating</p>
-                <p class="detail-area" id="movie-rating">fsdfsd</p>
+                <p class="detail-area" id="movie-rating"></p>
             </div>
             <div class="child-container">
                 <p class="label">Released</p>
-                <p class="detail-area" id="movie-released">ssdgs</p>
+                <p class="detail-area" id="movie-released"></p>
                 <p class="label">Runtime</p>
-                <p class="detail-area" id="movie-runtime">ssdgs</p>
+                <p class="detail-area" id="movie-runtime"></p>
             </div>
             <div class="child-container">
                 <p class="label">Actors</p>
-                <p class="detail-area" id="movie-actors">ssdgs</p>
+                <p class="detail-area" id="movie-actors"></p>
                 <p class="label">Plot</p>
-                <p class="detail-area" id="movie-plot">ssdgs</p>
+                <p class="detail-area" id="movie-plot"></p>
             </div>
         </div>
     </div>
