Added a button to fetch 2 trailers of the movie using YouTube API and display them at the bottom.

--- a/Movie Search Page/index.html
+++ b/Movie Search Page/index.html
@@ -14,6 +14,7 @@
             <div class="search-container">
                 <p id="movie-search-input" contenteditable="True"></p>
                 <button id="fetch-button">Fetch Details</button>
+                <button id="trailer-button">Get Trailer</button>
             </div>
             <img id="movie-poster" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mN88eD1HwAENwK5wwhTfQAAAABJRU5ErkJggg==" alt="asdfsdf">
         </div>
@@ -42,6 +43,11 @@
                 <p class="label">Plot</p>
                 <p class="detail-area" id="movie-plot"></p>
             </div>
+        </div>
+        <div class="trailer-container">
+            <div id="trailer1"></div>
+            <div id="trailer2"></div>
+            <!-- <img id="trailer-thumbnail"></img> -->
         </div>
     </div>
     
