This commit adds HTML for actor posters. The posters are displayed in a flex container with a gap of 3em between each poster. The posters are 17em high and have rounded corners. The posters are also given unique IDs so that they can be easily referenced in JavaScript.

--- a/Movie Search Page/index.html
+++ b/Movie Search Page/index.html
@@ -44,12 +44,20 @@
                 </div>
             </div>
         </div>
+        <div class="actor-poster-container">
+            <img class="tmdb-actor-poster" id="tmdb-actor-poster1" src="" alt="">
+            <img class="tmdb-actor-poster" id="tmdb-actor-poster4" src="" alt="">
+            <img class="tmdb-actor-poster" id="tmdb-actor-poster2" src="" alt="">
+            <img class="tmdb-actor-poster" id="tmdb-actor-poster3" src="" alt="">
+            <img class="tmdb-actor-poster" id="tmdb-actor-poster5" src="" alt="">
+        </div>
         <div class="trailer-container">
             <div class="trailer" id="trailer1"></div>
             <div class="trailer" id="trailer2"></div>
             <!-- <img id="trailer-thumbnail"></img> -->
         </div>
     </div>
+
     
     <script src="script.js"></script>
 </body>
