Removed ID from the Runtime label.

--- a/Movie Search Page/index.html
+++ b/Movie Search Page/index.html
@@ -33,7 +33,7 @@
                 <div class="child-container">
                     <p class="label">Released</p>
                     <p class="detail-area" id="movie-released"></p>
-                    <p class="label" id="runtime-label">Runtime</p>
+                    <p class="label">Runtime</p>
                     <p class="detail-area" id="movie-runtime"></p>
                 </div>
                 <div class="child-container">
@@ -57,7 +57,6 @@
             <!-- <img id="trailer-thumbnail"></img> -->
         </div>
     </div>
-
     
     <script src="script.js"></script>
 </body>
