The commit message describes the code changes made in the HTML file. The previous code contained specific image paths as href values for the download links. The current code removes the image paths from the download links' href attributes. Instead, the JavaScript code dynamically sets the image source as the download link's href using the URL.createObjectURL method. This refactoring improves the maintainability and flexibility of the code, allowing for easier addition and management of images without modifying the HTML directly.

--- a/JS_Download_Image/Download Single Image with the Download Icon/index.html
+++ b/JS_Download_Image/Download Single Image with the Download Icon/index.html
@@ -14,27 +14,27 @@
         <div class="image-container container">
             <div class="image-container-child">
                 <img class="dwImage" src="Images/house_island_2-wallpaper-1920x1080.jpg" alt="">
-                <a class="download-link" href="Images/house_island_2-wallpaper-1920x1080.jpg" download><i class="fa fa-download"></i></a>
+                <a class="download-link" download><i class="fa fa-download"></i></a>
             </div>
             <div class="image-container-child">
                 <img class="dwImage" src="Images/supercar_night_city-wallpaper-1920x1080.jpg" alt="">
-                <a class="download-link" href="Images/supercar_night_city-wallpaper-1920x1080.jpg" download><i class="fa fa-download"></i></a>
+                <a class="download-link" download><i class="fa fa-download"></i></a>
             </div>
             <div class="image-container-child">
                 <img class="dwImage" src="Images/the_last_of_us_part_ii_ellie-wallpaper-1920x1080.jpg" alt="">
-                <a class="download-link" href="Images/the_last_of_us_part_ii_ellie-wallpaper-1920x1080.jpg" download><i class="fa fa-download"></i></a>
+                <a class="download-link" download><i class="fa fa-download"></i></a>
             </div>
             <div class="image-container-child">
                 <img class="dwImage" src="Images/top_gun_maverick_movie_tom_cruise-wallpaper-1920x1080.jpg" alt="">
-                <a class="download-link" href="Images/top_gun_maverick_movie_tom_cruise-wallpaper-1920x1080.jpg" download><i class="fa fa-download"></i></a>
+                <a class="download-link" download><i class="fa fa-download"></i></a>
             </div>
             <div class="image-container-child">
                 <img class="dwImage" src="Images/wonder_woman_1984_gal_gadot-wallpaper-1920x1080.jpg" alt="">
-                <a class="download-link" href="Images/wonder_woman_1984_gal_gadot-wallpaper-1920x1080.jpg" download><i class="fa fa-download"></i></a>
+                <a class="download-link" download><i class="fa fa-download"></i></a>
             </div>
             <div class="image-container-child">
                 <img class="dwImage" src="Images/keep_the_ocean_clean-wallpaper-1920x1080.jpg" alt="">
-                <a class="download-link" href="Images/keep_the_ocean_clean-wallpaper-1920x1080.jpg" download><i class="fa fa-download"></i></a>
+                <a class="download-link" download><i class="fa fa-download"></i></a>
             </div>
         </div>
     </div>
@@ -43,3 +43,14 @@
 
 </body>
 </html>
+
+
+<!-- Alternatively we can also use the below code where we're setting the download link's href as the image path, 
+with help of which we can download the image by clicking on the download link. But in this way we will need to 
+set the image path as the link's href for all the images we put on the page. It's better to use JS code to 
+automatically set the image's source as the download link's href. -->
+
+<!-- <div class="image-container-child">
+    <img class="dwImage" src="Images/supercar_night_city-wallpaper-1920x1080.jpg" alt="">
+    <a class="download-link" href="Images/supercar_night_city-wallpaper-1920x1080.jpg" download><i class="fa fa-download"></i></a>
+</div> -->
