--- a/JS Image Uploader/index.html
+++ b/JS Image Uploader/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="image-upload.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d3aee35f08.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -14,10 +15,10 @@
             <span>Upload Images</span>
             <input type="file" id="upload-button" multiple>
         </div>
-        <div class="image-container" id="image-container"></div>
+        <div class="images-container" id="images-container"></div>
     </div>
 
-    <script src="image-upload.js"></script>
+    <script src="script.js"></script>
     
 </body>
 </html>
