Removed outdated link and added a new link for the 'Image Uploader' page.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="parent">
         <div class="link-container">
             <a class="page-link" href="Search Page/index.html" target="_blank" rel="noopenerer noreferrer">Search Page</a>
+            <a class="page-link" href="JS Image Uploader/index.html" target="_blank" rel="noopenerer noreferrer">Image Uploader</a>
             <a class="page-link" href="Movie Search Page/index.html" target="_blank" rel="noopenerer noreferrer">Movie Search Page</a>
             <a class="page-link" href="JS_Download_Image/Download all images in a container/index.html" target="_blank" rel="noopenerer noreferrer">Download all images in a container</a>
             <a class="page-link" href="JS_Download_Image/Download Single Image by double-clicking/index.html" target="_blank" rel="noopenerer noreferrer">Download Single Image by double-clicking</a>
