Created a map-container and cities-container.

--- a/Itinerary Generator/index.html
+++ b/Itinerary Generator/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 
-    <div id="map"></div>
+    <div class="map-container">
+        <div id="map"></div>
+        <div class="cities-container"></div>
+
+    </div>
     
 
 
