Assigned an ID to the cities-container to better declare it in the script.

--- a/Itinerary Generator/index.html
+++ b/Itinerary Generator/index.html
@@ -12,7 +12,7 @@
 
     <div class="map-container">
         <div id="map"></div>
-        <div class="cities-container"></div>
+        <div id="cities-container" class="cities-container"></div>
 
     </div>
     
