--- a/Itinerary Generator/index.html
+++ b/Itinerary Generator/index.html
@@ -13,11 +13,12 @@
     <div class="map-container">
         <div id="map"></div>
         <div id="cities-container" class="cities-container"></div>
-
+    </div>
+    <div class="search-container">
+        <p id="search-text" contenteditable="true">Enter city name here</p>
+        <button id="search-button">Locate City</button>
     </div>
     
-
-
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.js"></script>
     <script src="script.js"></script>
 
