Updated code to change 'Country' to 'Geographical Location'.

--- a/Itinerary Generator/index.html
+++ b/Itinerary Generator/index.html
@@ -25,8 +25,8 @@
                 <p id="latitude-output">Latitude Demo</p>
             </div>
             <div class="detail">
-                <p>Country</p>
-                <p id="country-output">Country Demo</p>
+                <p>Geographical Location</p>
+                <p id="location-output"></p>
             </div>
             <div class="detail">
                 <p>Languages spoken</p>
