Added an image container which will display all the uploaded images.

--- a/Image Sharing App/index.html
+++ b/Image Sharing App/index.html
@@ -12,6 +12,8 @@
         <input type="file" multiple>
         <button id="upload-button">Upload</button>
     </div>
+    <div class="images-container" id="images-container"></div>
+
     
 </body>
 </html>
