--- a/YouTube Clone/index.html
+++ b/YouTube Clone/index.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="parent">
+    <div class="top-bar">
+        <div class="left-placeholder">
+            <p>Left Placeholder text</p>
+        </div>
         <div class="search-container">
             <div id="search-box" contenteditable="true">Search</div>
-            <button id="search-button"></button>
+            <img id="search-button" src="icons8-search-50.png"></img>
+        </div>
+        <div class="right-placeholder">
+            <p>Right Placeholder text</p>
         </div>
     </div>
     
