This commit includes adding a link for the 'Roboto' font to the head section and modifying the search button container in the 'top-bar' section. The search button container now contains the search button icon with specified width and height.

--- a/YouTube Clone/index.html
+++ b/YouTube Clone/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AU's YouTube Clone</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="top-bar">
@@ -13,7 +14,9 @@
         </div>
         <div class="search-container">
             <div id="search-box" contenteditable="true">Search</div>
-            <img id="search-button" src="icons8-search-50.png"></img>
+            <div class="search-button-container">
+                <img id="search-button" src="icons8-search-50.png" width="25px" height="25px"></img>
+            </div>
         </div>
         <div class="right-placeholder">
             <p>Right Placeholder text</p>
