Decreased the size of the search icon.

--- a/YouTube Clone/index.html
+++ b/YouTube Clone/index.html
@@ -15,7 +15,7 @@
         <div class="search-container">
             <div id="search-box" contenteditable="true">Search</div>
             <div class="search-button-container">
-                <img id="search-button" src="icons8-search-50.png" width="25px" height="25px"></img>
+                <img id="search-button-image" src="icons8-search-50.png" width="20px" height="20px"></img>
             </div>
         </div>
         <div class="right-placeholder">
@@ -25,3 +25,4 @@
     
 </body>
 </html>
+
