Created a container which will display the top 2 search results from YouTube.

--- a/YouTube Clone/index.html
+++ b/YouTube Clone/index.html
@@ -22,7 +22,12 @@
             <p>Right Placeholder text</p>
         </div>
     </div>
+    <div class="trailer-container">
+        <div class="trailer" id="trailer1"></div>
+        <div class="trailer" id="trailer2"></div>
+    </div>
     
+    <script src="script.js"></script>
 </body>
 </html>
 
