Removed the 2 trailer links as the new trailer links will be created by JS when code is executed.

--- a/YouTube Clone/index.html
+++ b/YouTube Clone/index.html
@@ -22,10 +22,7 @@
             <p>Right Placeholder text</p>
         </div>
     </div>
-    <div class="trailer-container">
-        <div class="trailer" id="trailer1"></div>
-        <div class="trailer" id="trailer2"></div>
-    </div>
+    <div class="trailer-container"></div>
     
     <script src="script.js"></script>
 </body>
