Renamed the container that will display the video results.

--- a/YouTube Clone/index.html
+++ b/YouTube Clone/index.html
@@ -22,7 +22,7 @@
             <p>Right Placeholder text</p>
         </div>
     </div>
-    <div class="trailer-container"></div>
+    <div class="videos-container"></div>
     
     <script src="script.js"></script>
 </body>
