Added a div in between the search box and the search icon which will contain the number of search results(editable by user) to be dispalyed.

--- a/YouTube Clone/index.html
+++ b/YouTube Clone/index.html
@@ -14,6 +14,7 @@
         </div>
         <div class="search-container">
             <div id="search-box" contenteditable="true">Search</div>
+            <div id="results-count" contenteditable="true">Results Count</div>
             <div class="search-button-container">
                 <img id="search-button-image" src="search.png" width="22px" height="22px"></img>
             </div>
