Changed the search icon.

--- a/YouTube Clone/index.html
+++ b/YouTube Clone/index.html
@@ -16,7 +16,7 @@
             <div id="search-box" contenteditable="true">Search</div>
             <div id="results-count" contenteditable="true">Results Count</div>
             <div class="search-button-container">
-                <img id="search-button-image" src="search.png" width="22px" height="22px"></img>
+                <img id="search-button-image" src="search-icon.png" width="22px" height="22px"></img>
             </div>
         </div>
         <div class="right-placeholder">
