Added a table to the page that will keep track of the videos searched and the results count along with it.

--- a/YouTube Clone/index.html
+++ b/YouTube Clone/index.html
@@ -23,7 +23,24 @@
             <p>Right Placeholder text</p>
         </div>
     </div>
-    <div class="videos-container"></div>
+    <div class="videos-menu-container">
+        <div class="menu-container">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Searched Video</th>
+                        <th>Results Count</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Table body will be populated dynamically with JavaScript -->
+                </tbody>
+            </table>
+
+        </div>
+        <div class="videos-container"></div>
+
+    </div>
     
     <script src="script.js"></script>
 </body>
