Added class table-header to the headings.

--- a/YouTube Clone/index.html
+++ b/YouTube Clone/index.html
@@ -23,21 +23,19 @@
             <p>Right Placeholder text</p>
         </div>
     </div>
-    <div class="videos-menu-container">
-        <div class="menu-container">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Searched Video</th>
-                        <th>Results Count</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Table body will be populated dynamically with JavaScript -->
-                </tbody>
-            </table>
+    <div class="videos-videostable-container">
+        <table id="video-tracking-table">
+            <thead>
+                <tr>
+                    <th class="table-header">Searched Video</th>
+                    <th class="table-header">Results Count</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Table body will be populated dynamically with JavaScript -->
+            </tbody>
+        </table>
 
-        </div>
         <div class="videos-container"></div>
 
     </div>
