--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a class="page-link" href="YouTube Clone/index.html" target="_blank" rel="noopenerer noreferrer">YouTube Clone</a>
             <a class="page-link" href="JS Image Uploader/index.html" target="_blank" rel="noopenerer noreferrer">Image Uploader</a>
             <a class="page-link" href="Movie Search Page/index.html" target="_blank" rel="noopenerer noreferrer">Movie Search Page</a>
+            <a class="page-link" href="Birthday Reminder/index.html" target="_blank" rel="noopenerer noreferrer">Birthday Reminder</a>
             <a class="page-link" href="Itinerary Generator/index.html" target="_blank" rel="noopenerer noreferrer">Itinerary Generator</a>
             <a class="page-link" href="JS_Download_Image/Download all images in a container/index.html" target="_blank" rel="noopenerer noreferrer">Download all images in a container</a>
             <a class="page-link" href="JS_Download_Image/Download Single Image by double-clicking/index.html" target="_blank" rel="noopenerer noreferrer">Download Single Image by double-clicking</a>
