Replaced header-container with navbar.

--- a/ACI/index.html
+++ b/ACI/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header-container">
-        <div id="main-header">Association of Computer Institutes</div>
-        <div class="contact-container">
-            <div id="about-us">About Us</div>
-            <div id="contact-us">Contact Us</div>
-        </div>
+    <div class="navbar">
+        <li id="logo"><a href="#"></a>Logo Placeholder</li>
+        <li id="about-us">About Us</li>
+        <li id="contact-us">Contact Us</li>
+    </div>
 
     
 </body>
